exploring some template funcitons

--- a/src/style/variables.sass
+++ b/src/style/variables.sass
@@ -6,10 +6,10 @@
 
 // Config vars
 // Kaldi logo brand color: #FD461E
-$kaldi-red: #D64000
-$kaldi-red-invert: #fff
+$phi-blue: #0076d6
+$phi-blue-invert: #fff
 
-$primary: $kaldi-red
-$primary-invert: $kaldi-red-invert
+$primary: $phi-blue
+$primary-invert: $phi-blue-invert
 $body-color: #333
 $black: #2b2523
