--- a/src/style/custom-style.sass
+++ b/src/style/custom-style.sass
@@ -51,10 +51,10 @@
     border-radius: .25rem
     text-decoration: none
     font-weight: 700
-    color: #CC3700
+    color: $phi-blue
     text-align: center
-    -webkit-box-shadow: inset 0 0 0 2px #CC3700
-    box-shadow: inset 0 0 0 2px #f40
+    -webkit-box-shadow: inset 0 0 0 2px #0d66d2
+    box-shadow: inset 0 0 0 2px #1880ff
     -webkit-transition: all .15s ease
     transition: all .15s ease
 
@@ -95,7 +95,7 @@ footer.footer
 
 // blog roll
 .blog-list-item.is-featured
-  background-color: #d6400033
+  background-color: #0060d633
 .blog-list-item header
   display: flex
   margin-bottom: 1em
