--- a/src/style/variables.sass
+++ b/src/style/variables.sass
@@ -5,8 +5,7 @@
 @import "~bulma/sass/utilities/initial-variables"
 
 // Config vars
-// Kaldi logo brand color: #FD461E
-$phi-blue: #0076d6
+$phi-blue: #2619b1
 $phi-blue-invert: #fff
 
 $primary: $phi-blue
