--- a/src/style/custom-style.sass
+++ b/src/style/custom-style.sass
@@ -61,6 +61,11 @@ body
     -webkit-transition: all .15s ease
     transition: all .15s ease
 
+.btn-cover
+  background: #93b6ee
+  color: $phi-blue
+  margin: 10px
+
 .margin-top-0
   margin-top: 0 !important
 .navbar-item img
